# spend-pilot

./: README.md
backend/: README.md  main.py  pyproject.toml
backend/core/: config.py  system_prompt.py
backend/routers/: analyze.py  health.py  upload.py
backend/schemas/: response.py  responses.py
backend/services/: file-processor.py  file_processor.py  llm_client.py  statement_analyzer.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/upload-statement/: page.tsx
frontend/components/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navigation.tsx  StatSection.tsx
frontend/lib/: api.ts
